Update JWT_EXPIRE duration from 15m to 24hr

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=2100
 MONGO_URI=mongodb+srv://qms-db:qmsdb2026@cluster0.68rpops.mongodb.net/?appName=Cluster0
 JWT_SECRET=supersecretkey
 JWT_REFRESH_SECRET=refreshsecretkey
-JWT_EXPIRE=15m
+JWT_EXPIRE=24hr
 JWT_REFRESH_EXPIRE=7d
